--- a/app/src/main/res/layout/activity_authentication.xml
+++ b/app/src/main/res/layout/activity_authentication.xml
@@ -6,7 +6,7 @@
     tools:context=".activity.AuthenticationActivity">
 
     <EditText
-        android:id="@+id/authentikasiNomerHp"
+        android:id="@+id/autentikasiNomerHp"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_centerInParent="true"
@@ -21,10 +21,10 @@
         android:textSize="@dimen/_18sp" />
 
     <TextView
-        android:id="@+id/authentikasiSubmit"
+        android:id="@+id/autentikasiSubmit"
         android:layout_width="350dp"
         android:layout_height="50dp"
-        android:layout_below="@id/authentikasiNomerHp"
+        android:layout_below="@id/autentikasiNomerHp"
         android:layout_centerInParent="true"
         android:layout_marginTop="18dp"
         android:background="@drawable/background"
