--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -15,9 +15,14 @@
     <ImageView
         android:layout_width="150dp"
         android:layout_height="30dp"
+        android:layout_below="@+id/linear1"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="35dp"
+        android:layout_marginStart="129dp"
+        android:layout_marginTop="11dp"
+        android:layout_marginEnd="132dp"
+        android:layout_marginBottom="74dp"
         android:src="@drawable/drivon" />
 
     <TextView
@@ -97,8 +102,8 @@
 
         <Button
             android:id="@+id/btn_signup"
-            android:layout_width="350dp"
-            android:layout_height="55dp"
+            android:layout_width="283dp"
+            android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="18dp"
             android:background="@drawable/shape"
@@ -107,6 +112,5 @@
             android:text="@string/signup"
             android:textColor="@android:color/white"
             android:textSize="@dimen/_18sp" />
-
     </LinearLayout>
 </RelativeLayout>
